crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__single__range.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Ok(
    (
        "",
        HourRule {
            kinds: [
                HourKind {
                    range: (
                        Hour(
                            0,
                        ),
                        Hour(
                            23,
                        ),
                    ),
                    periodic: HourPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
