crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__single__range_reverse.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Ok(
    (
        "",
        HourRule {
            kinds: [
                HourKind {
                    range: (
                        Hour(
                            23,
                        ),
                        Hour(
                            0,
                        ),
                    ),
                    periodic: HourPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
