crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__single__specifier_15.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "",
                    '-',
                ),
                Nom(
                    "15",
                    Alt,
                ),
            ],
        },
    ),
)
